[project]
name = "inquire"
version = "0.1.0"
description = "Intelligent inquiry with structured results - BAML + Deep Research"
requires-python = ">=3.11"

dependencies = [
    "baml-py>=0.60.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
